# SOLID

./: .gitignore  README.md  pyproject.toml  train.sh
configs/baseline/: train_config.yaml
data/: dataset.py
models/: classifier.py
models/baseline/: ResNet18.py
models/multimodal/: classifier.py  depth_encoder.py  fusion.py  geometry_encoder.py  rgb_encoder.py  solid_pipeline.py
scripts/: check_data.py  constants.py
scripts/baseline/: train_cloud_baseline.py  train_depth_baseline.py  train_rgb_baseline.py
scripts/multimodal/: train_solid.py
utils/: visualization.py
