[project]
name = "solid-virtual-environment"
version = "0.1.0"
description = "Multi-modal object classification with RGB, depth, and 3D geometry fusion."
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "torch==2.6.0",
    "torchvision",
    "tqdm",
    "open3d>=0.18.0,<0.20.0",  # compatible with Python 3.10–3.12 only
    "scikit-learn",
    "matplotlib",
    "numpy",
    "hydra-core==1.3.2",
    "omegaconf",
    "pyyaml"
]
